syntax = "proto3";
option go_package = "./protos";

message Message {
  int64 id = 1;
  string body = 2;
  string user = 3;
}

message Empty {}

message Messages {
   repeated Message messages = 1;
}

message Status {
  int32 status = 1;
}

service ChatService {
  rpc SayHello(Message) returns (Message) {}
  rpc SendMessage(Message) returns (Status) {}
  rpc GetMessages(Empty) returns (Messages) {}
}
